--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.11.0)
 
 project (csi-hostpath-cpp VERSION 0.0.1 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 17)
 
 # Set all required dependencies path
 set(gRPC_DIR "${CMAKE_SOURCE_DIR}/vendor/grpc/lib/cmake/grpc/")
@@ -18,10 +18,15 @@ add_executable(hostpath
 		main.cpp
 		proto/csi.pb.cc
 		proto/csi.grpc.pb.cc
-		src/csi_services.cpp)
+		src/csi_services.cpp
+		src/identity_services.cpp
+		src/controller_services.cpp
+		src/node_services.cpp
+		)
 
 target_include_directories(hostpath PRIVATE
 				"${CMAKE_SOURCE_DIR}"
 				"${CMAKE_SOURCE_DIR}/src"
 				"${CMAKE_SOURCE_DIR}/proto")
+
 target_link_libraries(hostpath gRPC::grpc++)
