--- a/.github/workflows/build_code.yml
+++ b/.github/workflows/build_code.yml
@@ -1,4 +1,4 @@
-name: Code Build
+name: Build
 
 on:
   push:
@@ -28,5 +28,5 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -j
       
