--- a/.github/workflows/build_code.yml
+++ b/.github/workflows/build_code.yml
@@ -32,6 +32,9 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/${{env.BUILD_DIRECTORY}} --config ${{env.BUILD_TYPE}} -j
       
+    - name: Get Build Version 
+      run: echo "VERSION=$(${{github.workspace}}/${{env.BUILD_DIRECTORY}}/hostpath --version)" >> $GITHUB_ENV
+
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
@@ -40,6 +43,11 @@ jobs:
         password: ${{ secrets.HOSTPATH_IMAGE_BUILD_SECRET }}
         
     - name: Build Docker image
-      run: |
-        docker build . --tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:latest
-        docker push ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:latest
+      run: docker build . --tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
+        
+    - name: Retag Image
+      if: ${{ env.VERSION == '0.0.0' }}
+      run: docker tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}} ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:latest
+        
+    - name: Push Docker Image
+      run: docker push ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
