--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
 		"github.vscode-pull-request-github",
 		"cschlosser.doxdocgen",
 		"jeff-hykin.better-cpp-syntax",
-		"ms-vscode.cpptools-themes"
+		"ms-vscode.cpptools-themes",
+		"redhat.vscode-yaml"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
