--- a/.github/workflows/build_code.yml
+++ b/.github/workflows/build_code.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [main, shivaji/k8s_yamls]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -21,33 +21,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      - name: Configure CMake
+        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+        run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
-    - name: Build Code
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/${{env.BUILD_DIRECTORY}} --config ${{env.BUILD_TYPE}} -j
-      
-    - name: Get Build Version 
-      run: echo "VERSION=$(${{github.workspace}}/${{env.BUILD_DIRECTORY}}/hostpath --version)" >> $GITHUB_ENV
+      - name: Build Code
+        # Build your program with the given configuration
+        run: cmake --build ${{github.workspace}}/${{env.BUILD_DIRECTORY}} --config ${{env.BUILD_TYPE}} -j
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.HOSTPATH_IMAGE_BUILD_SECRET }}
-        
-    - name: Build Docker image
-      run: docker build . --tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
-        
-    - name: Retag and Push Image
-      # Retag and push images only if it is not development branch
-      if: ${{ env.VERSION != '0.0.0' }}
-      run: |
-        docker tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}} ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:latest
-        docker push ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
+      - name: Get Build Version
+        run: echo "VERSION=v$(${{github.workspace}}/${{env.BUILD_DIRECTORY}}/hostpath --version)" >> $GITHUB_ENV
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.HOSTPATH_IMAGE_BUILD_SECRET }}
+
+      - name: Build Docker image
+        run: docker build . --tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
+
+      - name: Retag and Push Image
+        # Retag and push images only if it is not development branch
+        #if: ${{ env.VERSION != 'v0.0.0' }} # Enable image creation for master branch too
+        run: |
+          docker tag ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}} ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:latest
+          docker push ghcr.io/sawantshivaji1997/${{env.DOCKER_IMAGE_NAME}}:${{env.VERSION}}
