--- a/deploy/csi_hostpath_plugin.yml
+++ b/deploy/csi_hostpath_plugin.yml
@@ -220,8 +220,8 @@ spec:
         - name: hostpath
           image: ghcr.io/sawantshivaji1997/cpp-hostpath:v0.0.0
           args:
-            - "--endpoint=$(CSI_ENDPOINT)"
-            - "--nodeid=$(KUBE_NODE_NAME)"
+            - "--endpoint $(CSI_ENDPOINT)"
+            - "--nodeid $(KUBE_NODE_NAME)"
           env:
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
